# zorba-process-module

./: CMakeLists.txt
src/: process-1.xq  process-2.xq
src/com/zorba-xquery/www/modules/: CMakeLists.txt  process-1.xq  process-2.xq  process.xq
src/com/zorba-xquery/www/modules/process-2.xq.src/: process.cpp  process.h
src/com/zorba-xquery/www/modules/process.xq.src/: process.cpp  process.h
src/process-1.xq.src/: process.cpp
src/process-2.xq.src/: process.cpp  process.h
test/ExpQueryResults/: process.xml.res
test/Queries/: process.xq  process1-01.xq  process2-01.xq  process2-02.xq  process2-03.xq  process2-04.xq  process2-05.xq  process2-06.xq  process2-07.xq
